--- a/src/input.css
+++ b/src/input.css
@@ -2,6 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-.main {
-    height: 900px;
+#root {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+}
+
+.customScrollbar::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 10px;
+    background-color: transparent;
+}
+
+.customScrollbar::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #18aaaa;
+}
+
+.customScrollbar::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: transparent;
 }
